--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 eyre = "0.6.8"
+regex = "1"
 
 [dev-dependencies]
 rstest = "0.16.0"
